[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest


[tool:pytest]
testpaths = tests
addopts = --forked
          --verbose
          --json-report
          --json-report-file=htmlcov/report.json
          --junitxml=./build/reports/unit-tests.xml
console_output_style = progress
junit_family = legacy
